# SimpleLight

./: LICENSE  README.md
Docs/: Software_Structure.md  ws2812b_controller.md
PyoConnect_v1.0/: README.md  db_connecter.py  light_control.pyoc
Scripts/: light_control  light_control~
server/: README.md  SimpleLight.html  SimpleLight.js  light_control_server.js  package.json  web_palette.md
server/css/: wheelcolorpicker.css
server/js/: Scaling.js  jquery.touchwheelcolorpicker.js  jquery.wheelcolorpicker.js
sql/: database.ddl~
ws2812b_controller/: CMakeLists.txt  README.md  light_control.cpp
ws2812b_controller/cmake/: FindMySQLCppConn.cmake  check_cppconn_1_1_6_or_higher.cpp  getColumnCharset.cpp
